improve the checkifitstrue website info

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 <div class="demo-interface">
                                     <h3>🔍 Fact Check Result</h3>
                                     <div class="claim-result">
-                                        <div class="claim-text">"vaccines cause autism"</div>
+                                        <div class="claim-text">"vaccine causes autism"</div>
                                         <div class="result-badge false">FALSE</div>
                                         <div class="confidence">Confidence: 100%</div>
                                     </div>
@@ -229,8 +229,8 @@
                                     <div class="sources">
                                         <strong>📚 Sources:</strong>
                                         <ul>
-                                            <li>CDC</li>
-                                            <li>World Health Organization</li>
+                                            <li>The MMR vaccine and autism: Sensation, refutation, retraction...</li>
+                                            <li>Vaccination and Allergic Disease: A Birth Cohort Study</li>
                                             <li>American Academy of Pediatrics</li>
                                         </ul>
                                     </div>
@@ -427,6 +427,21 @@
             <div class="container">
                 <h2 class="text-center">Featured Projects</h2>
                 <div class="projects-grid">
+                    <div class="project-card">
+                        <h3>Check If It's True - AI Fact-Checking Platform</h3>
+                        <p>Built a comprehensive fact-checking platform that combines LLMs with authoritative sources to combat misinformation. Features confidence scoring, detailed explanations, and source verification.</p>
+                        <div class="project-tags">
+                            <span class="tag">OpenAI GPT</span>
+                            <span class="tag">React</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">NLP</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://checkifitstrue.com" target="_blank" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </div>
                     <div class="project-card">
                         <h3>Conversational AI Platform</h3>
                         <p>Built end-to-end conversational AI system using LLMs for enterprise sales automation, improving lead qualification efficiency by 40%.</p>
